Refactor: Now as separate collection (timestamp slug) + tags aggregation

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:watch": "node scripts/dev-watch.mjs",
     "sync:assets": "node scripts/sync-writing-assets.mjs",
     "new:post": "node scripts/new-post.mjs",
+    "new:now": "node scripts/new-now.mjs",
     "build": "npm run sync:assets && astro build && pagefind --site dist",
     "preview": "astro preview",
     "astro": "astro"
