Feat: show timestamps to seconds + backfill writing pubDate

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "publish:writing:confirm": "node scripts/publish-writing-confirm.mjs",
     "edit:writing": "node scripts/edit-writing.mjs",
     "edit:now": "node scripts/edit-now.mjs",
+    "backfill:pubdate": "node scripts/backfill-pubdate-time.mjs",
     "deploy:ensure": "node scripts/ensure-pages-deploy.mjs --wait",
     "publish:now": "node scripts/publish-now.mjs",
     "check": "astro check",
