--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deploy:ensure": "node scripts/ensure-pages-deploy.mjs --wait",
     "publish:now": "node scripts/publish-now.mjs",
     "check": "astro check",
-    "build": "npm run sync:assets && astro build && pagefind --site dist",
+    "build": "node scripts/fetch-github-pins.mjs && npm run sync:assets && astro build && pagefind --site dist",
     "audit:size": "node scripts/audit-size.mjs",
     "preview": "astro preview",
     "astro": "astro"
